[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/scenes/game/pause_menu/pause_menu.gd" type="Script" id=1]
[ext_resource path="res://scenes/options.tscn" type="PackedScene" id=2]

[node name="PauseMenu" type="WindowDialog"]
pause_mode = 2
margin_right = 175.0
margin_bottom = 275.0
window_title = "Pause"
script = ExtResource( 1 )

[node name="Options" parent="." instance=ExtResource( 2 )]
visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
custom_constants/separation = 10

[node name="Resume" type="Button" parent="VBoxContainer"]
margin_right = 155.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Resume"

[node name="Options" type="Button" parent="VBoxContainer"]
margin_top = 66.0
margin_right = 155.0
margin_bottom = 122.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Options"

[node name="GoToMainMenu" type="Button" parent="VBoxContainer"]
margin_top = 132.0
margin_right = 155.0
margin_bottom = 188.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Go To Main Menu"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 198.0
margin_right = 155.0
margin_bottom = 255.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Quit"

[connection signal="popup_hide" from="." to="." method="_on_PauseMenu_popup_hide"]
[connection signal="visibility_changed" from="." to="." method="_on_PauseMenu_visibility_changed"]
[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer/GoToMainMenu" to="." method="_on_GoToMainMenu_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
